# Software_2024

./: .gitignore  .gitmodules  API_Test.py  LICENSE  README.md  all_in_one_pi4_installer.sh  build.sh  compose.yaml  shutdown_beaumont.bat  shutdown_beaumont.sh
Cameras/: README.md  eer-camera.service  install.sh  spyglass.conf  spyglass.service
GUI/: .env  .eslintrc.js  .gitignore  Dockerfile  README.md  config.js  configServer.js  index.html  nginx.conf  package-lock.json  package.json  server.js  vite.config.ts
GUI/public/: index.html
GUI/src/: App.jsx  Atoms.jsx  Controller.jsx  ControllerMenu.jsx  ROS.jsx  SafetyDisclaimer.jsx  Settings.jsx  index.jsx  index.tsx  root.tsx  vite-env.d.ts
GUI/src/api/: Atoms.tsx  Controller.tsx  ROS.jsx  ROS.tsx  Types.tsx
GUI/src/atoms/: CameraIP.jsx  CurrentController.jsx  LocalStorage.jsx
GUI/src/components/: App.tsx  Atoms.tsx  BotTab.tsx  CameraTab.tsx  Controller.tsx  ControllerEditor.tsx  ControllerTab.tsx  MobileTab.tsx  NavBar.tsx  ProfileEditor.tsx  ROS.tsx  ResponsiveAppBar.tsx  SafetyDisclaimer.tsx  SettingsTab.tsx  TabletApp.tsx  TaskTab.tsx
GUI/src/pages/: Chart.tsx  TabletApp.tsx  cam_sim.py  cam_sim2.py  scienceController.tsx  screenshot.tsx  tasks.json  test.tsx
GUI/src/routes/: bot.tsx  bots.tsx  index.tsx  (+3 more)
ROS2/: Dockerfile  README.md
ROS2/colcon_ws/: docker_entrypoint.sh
ROS2/eer_messages/: CMakeLists.txt  package.xml
ROS2/src/health_check/: CMakeLists.txt  package.xml
ROS2/src/health_check/src/: healthCheckCaller.cpp  healthCheckResponse.cpp
ROS2/worlds/: competition_world  playground.world
(+167 files in other folders)
